; ModuleID = '/home/carl/AnghaBench/git/extr_utf8.c_skip_utf8_bom.c'
source_filename = "/home/carl/AnghaBench/git/extr_utf8.c_skip_utf8_bom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@utf8_bom = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skip_utf8_bom(i8** %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i64, align 8
  store i8** %0, i8*** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load i32, i32* @utf8_bom, align 4
  %8 = call i64 @strlen(i32 %7)
  %9 = icmp ult i64 %6, %8
  br i1 %9, label %18, label %10

10:                                               ; preds = %2
  %11 = load i8**, i8*** %4, align 8
  %12 = load i8*, i8** %11, align 8
  %13 = load i32, i32* @utf8_bom, align 4
  %14 = load i32, i32* @utf8_bom, align 4
  %15 = call i64 @strlen(i32 %14)
  %16 = call i64 @memcmp(i8* %12, i32 %13, i64 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %25

19:                                               ; preds = %10
  %20 = load i32, i32* @utf8_bom, align 4
  %21 = call i64 @strlen(i32 %20)
  %22 = load i8**, i8*** %4, align 8
  %23 = load i8*, i8** %22, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 %21
  store i8* %24, i8** %22, align 8
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %19, %18
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @strlen(i32) #1

declare dso_local i64 @memcmp(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
